<?xml version="1.0"?>
<package format="2">
  <name>particles</name>
  <version>0.0.0</version>
  <description>The particle filter package</description>
  <maintainer email="zahar.after4000@gmail.com">ぞはる</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/chatter</url> -->
  <author email="zahar.after4000@gmail.com">ぞはる</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
